[fix] fix all the compile problems